--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,32 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>Zerocraft Sync</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <div class="base-grid">
+      <div class="content-grid">
+        <div class="server-info">
+          <div class="server-info-item">
+            <h5>Status</h5>
+            <h3>OFFLINE</h3>
+          </div>
+          <div class="server-info-item">
+            <h5>Name</h5>
+            <h3>Server Name</h3>
+          </div>
+          <div class="server-info-item">
+            <h5>IP</h5>
+            <h3>192.168.x.x</h3>
+          </div>            
+          <div class="server-info-item">
+            <h5>Port</h5>
+            <h3>3306</h3>
+          </div>            
+        </div>
+        <button>Start Server</button>
+      </div>
+    </div>
   </body>
 </html>
