--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8" />
     <title>Zerocraft Sync</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
     <div class="base-grid">
+      <div class="frame-grid">
+        <h4 style="color: white; padding: 10px 0px; margin: auto 10px;">Macro Master</h4>
+        <button id="minimizeButton" class="fa fa-window-minimize"></button>
+        <button id="maximizeButton" class="fa fa-window-maximize"></button>
+        <button id="exitButton" class="fa-solid fa-power-off"></button>
+      </div>
+
       <div class="content-grid">
         <div class="server-info">
           <div class="server-info-item">
@@ -30,4 +38,5 @@
       </div>
     </div>
   </body>
+  <script src="frame.js"></script>
 </html>
