--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
+    <div id="settingsOverlay" class="overlay" style="display: none;">
+      <div id="settingsContent" class="centered-container" style="text-align: center;">
+        <div style="display: grid">
+          <h1 id="mediaTypeHeader">Host Settings</h1>
+        </div>
+        <input id="serverTitleInput" type="text" placeholder="Server Name" style="text-align: center;">
+        <input id="gistIDInput" type="text" placeholder="Gist ID" style="text-align: center;">
+        <input id="accessTokenInput" type="text" placeholder="Access Token" style="text-align: center;">
+        <div style="display: grid;">
+          <button id="saveSettingsButton" class="input-button">Save</button>
+          <button id="backSettingsButton" class="input-button" style="display: none;">Add</button>
+        </div>
+      </div>
+    </div>
+
+
+
     <div class="base-grid">
       <div class="frame-grid">
         <h4 style="color: white; padding: 10px 0px; margin: auto 10px;">Macro Master</h4>
