--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
-    <div id="settingsOverlay" class="overlay" style="display: none;">
+    <div id="settingsOverlay" class="overlay" style="display: flex;">
       <div id="settingsContent" class="centered-container" style="text-align: center;">
         <div style="display: grid">
           <h1 id="mediaTypeHeader">Host Settings</h1>
@@ -56,4 +56,5 @@
     </div>
   </body>
   <script src="frame.js"></script>
+  <script src="settings.js"></script>
 </html>
