--- a/src/index.html
+++ b/src/index.html
@@ -36,19 +36,19 @@
         <div class="server-info">
           <div class="server-info-item">
             <h5>Status</h5>
-            <h3>OFFLINE</h3>
+            <h3 id="serverStatusText"></h3>
           </div>
           <div class="server-info-item">
-            <h5>Name</h5>
-            <h3>Server Name</h3>
+            <h5>Server Name</h5>
+            <h3 id="serverNameText">Server Name</h3>
           </div>
           <div class="server-info-item">
             <h5>IP</h5>
-            <h3>192.168.x.x</h3>
+            <h3 id="serverIPText">192.168.x.x</h3>
           </div>            
           <div class="server-info-item">
             <h5>Port</h5>
-            <h3>3306</h3>
+            <h3 id="serverPortText">3306</h3>
           </div>            
         </div>
         <button>Start Server</button>
@@ -57,4 +57,5 @@
   </body>
   <script src="frame.js"></script>
   <script src="settings.js"></script>
+  <script src="gist.js"></script>
 </html>
