Added Zerotier IP Input
- This will request the user's personal zerotier ip within the network. This will be used later
- Zerotier IP is added to settings.json

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <input id="serverTitleInput" type="text" placeholder="Server Name" style="text-align: center;">
         <input id="gistIDInput" type="text" placeholder="Gist ID" style="text-align: center;">
         <input id="accessTokenInput" type="text" placeholder="Access Token" style="text-align: center;">
+        <input id="ipInput" type="text" placeholder="Zerotier IP" style="text-align: center;">
         <div style="display: grid;">
           <button id="saveSettingsButton" class="input-button">Save</button>
           <button id="backSettingsButton" class="input-button" style="display: none;">Add</button>
