Server Status Gist Update Functionality
- If you click the start button when the server status is offline it will change it to offline and add in all server information to the gist
- Basic display for now. Click start button again to change the server status to offline. More changes coming

--- a/src/index.html
+++ b/src/index.html
@@ -52,11 +52,12 @@
             <h3 id="serverPortText">3306</h3>
           </div>            
         </div>
-        <button>Start Server</button>
+        <button id="toggleServerButton">Start Server</button>
       </div>
     </div>
   </body>
   <script src="frame.js"></script>
   <script src="settings.js"></script>
   <script src="gist.js"></script>
+  <script src="server.js"></script>
 </html>
