--- a/src/index.html
+++ b/src/index.html
@@ -41,18 +41,19 @@
           </div>
           <div class="server-info-item">
             <h5>Server Name</h5>
-            <h3 id="serverNameText">Server Name</h3>
+            <h3 id="serverNameText"></h3>
           </div>
           <div class="server-info-item">
             <h5>IP</h5>
-            <h3 id="serverIPText">192.168.x.x</h3>
+            <h3 id="serverIPText"></h3>
           </div>            
           <div class="server-info-item">
             <h5>Port</h5>
-            <h3 id="serverPortText">3306</h3>
+            <h3 id="serverPortText"></h3>
           </div>            
         </div>
-        <button id="toggleServerButton">Start Server</button>
+        <button id="startServerButton">Start Server</button>
+        <button id="stopServerButton" style="display: none;">Stop Server</button>
       </div>
     </div>
   </body>
