App Host Functionality
- If server is offline a server can start the server and they will be marked as host
- Any users using the the app will not be able to see start or stop buttons.
- This will limit users accidentally changing the gist data when it shouldn't be
- Only the host can see the stop button and change the gist data

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
           </div>            
         </div>
         <button id="startServerButton">Start Server</button>
-        <button id="stopServerButton" style="display: none;">Stop Server</button>
+        <button id="stopServerButton">Stop Server</button>
       </div>
     </div>
   </body>
