Server Launch Information
- Instead of showing just the bedrock_server console. Below the start button if the user is host it will display what point the server is at. "Starting", "Online"
- This is different than the display of the gist data's Online.

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <button id="exitButton" class="fa-solid fa-power-off"></button>
       </div>
 
-      <div class="content-grid">
+      <div id="content" class="content-grid">
         <div class="server-info">
           <div class="server-info-item">
             <h5>Status</h5>
@@ -58,6 +58,7 @@
         </div>
         <button id="startServerButton">Start Server</button>
         <button id="stopServerButton">Stop Server</button>
+        <span id="consoleText" class="server-status" style="display: none;">Initializing</span>
       </div>
     </div>
   </body>
