Update World to Repo
- Lots more improvements coming
- When user stops the server the world data folder will be pushed to the repo to keep world data up to date
- Added repo input in settings
- Repo link is used when added to the repo
- Access code was updated to also edit repos

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
           <h2 id="mediaTypeHeader">Host Settings</h2>
         </div>
         <input id="serverTitleInput" type="text" placeholder="Server Name" style="text-align: center;">
+        <input id="repoLinkInput" type="text" placeholder="Repo Link" style="text-align: center;">
         <input id="gistIDInput" type="text" placeholder="Gist ID" style="text-align: center;">
         <input id="accessTokenInput" type="text" placeholder="Access Token" style="text-align: center;">
         <input id="ipInput" type="text" placeholder="Zerotier IP" style="text-align: center;">
@@ -66,4 +67,5 @@
   <script src="settings.js"></script>
   <script src="gist.js"></script>
   <script src="server.js"></script>
+  <script src="worldRepo.js"></script>
 </html>
