--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
         </div>
         <button id="startServerButton">Start Server</button>
         <button id="stopServerButton">Stop Server</button>
-        <span id="consoleText" class="server-status" style="display: none;">Initializing</span>
+        <span id="consoleText" class="server-status" style="display: none; place-items: center;">Initializing</span>
       </div>
     </div>
   </body>
