Show / Hide Terminal Button
- Whenever in a starting or stopping mode the terminal button will not be visible

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         </div>
         <div id="hostConsolePreview" style="display: none; grid-template-columns: 1fr auto; background-color: black; place-content: center;">
           <span id="consoleText" class="server-status">Initializing</span>
-          <button id="toggleTerminalButton" class="slim-button fas fa-terminal"></button>
+          <button id="toggleTerminalButton" class="slim-button fas fa-terminal" style="display: none"></button>
         </div>
       </div>
     </div>
