--- a/src/consoleWindow.html
+++ b/src/consoleWindow.html
@@ -7,9 +7,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
-    <div class="base-grid">
-      <div id="content" class="content-grid">
-      </div>
+    <div style="display: grid; height: 100vh;">
+        <div class="console-grid">
+            <div id="consoleContent" class="console-content">
+      
+            </div>
+            <div class="console-input-div">
+              <input type="text">
+              <button>Send</button>
+            </div>
+          </div>      
     </div>
   </body>
   <script src="console.js"></script>
