Send Console Messages
- Console window's text input to type in any normal bedrock_server command.
- Click the send button and command will execute on server and the input will be cleared
*** Thought: Might be a good idea to disallow stop commands

--- a/src/consoleWindow.html
+++ b/src/consoleWindow.html
@@ -13,8 +13,8 @@
       
             </div>
             <div class="console-input-div">
-              <input type="text">
-              <button>Send</button>
+              <input id="consoleTextInput" type="text">
+              <button id="consoleSendButton">Send</button>
             </div>
           </div>      
     </div>
