Settings Cancel Button
- If user goes into their settings to change something and wants to just back out and go back to the old settings without saving they can now do so
- Cancel settings button is only visible past the initial setup

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
           <span id="selectedDirectoryText" class="selected-directory">Select Server Folder</span>
           <button id="selectDirectoryButton" class="slim-button fas fa-folder"></button>
         </div>
-        <div style="display: grid;">
+        <div style="display: grid; grid-template-columns: 1fr auto; grid-gap: 5px;">
           <button id="saveSettingsButton" class="input-button">Save</button>
-          <button id="backSettingsButton" class="input-button" style="display: none;">Add</button>
+          <button id="backSettingsButton" class="input-button fas fa-x" style="display: none; padding: 0px 10px;"></button>
         </div>
       </div>
     </div>
