--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
           <span id="selectedDirectoryText" class="selected-directory">Select Server Folder</span>
           <button id="selectDirectoryButton" class="slim-button fas fa-folder"></button>
         </div>
-        <div style="display: grid; grid-template-columns: 1fr auto; grid-gap: 5px;">
+        <div style="display: grid; grid-template-columns: auto 1fr auto; grid-gap: 5px;">
+          <button id="pasteAllSettings" class="slim-button fas fa-upload"></button>
           <button id="saveSettingsButton" class="input-button">Save</button>
           <button id="backSettingsButton" class="input-button fas fa-x" style="display: none; padding: 0px 10px;"></button>
         </div>
