--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
+    <div id="stopOverlay" class="overlay" style="display: none;">
+      <div id="stopOverlayContent" class="stop-container" style="text-align: center;">
+        <div style="display: grid">
+          <h2>Stop the Server?</h2>
+        </div>
+        <div style="display: grid; grid-template-columns: 1fr 1fr; grid-gap: 5px;">
+          <button id="confirmStopButton" class="input-button">Yes</button>
+          <button id="cancelStopButton" class="input-button">No</button>
+        </div>
+      </div>
+    </div>
+
+
     <div id="settingsOverlay" class="overlay" style="display: none;">
       <div id="settingsContent" class="centered-container" style="text-align: center;">
         <div style="display: grid">
-          <h2 id="mediaTypeHeader">Host Settings</h2>
+          <h2>Host Settings</h2>
         </div>
         <input id="serverTitleInput" type="text" placeholder="Server Name" style="text-align: center;">
         <input id="repoLinkInput" type="text" placeholder="Repo Link" style="text-align: center;">
@@ -58,8 +71,8 @@
         </div>
         <div id="startControls" style="display: grid; grid-template-columns: auto 1fr; grid-gap: 5px;">
           <button id="toggleOptionsButton" class="fas fa-gear" style="padding: 0px 15px;"></button>
-          <button id="startServerButton">Start Server</button>
-          <button id="stopServerButton" style="display: none">Stop Server</button>
+          <button class="input-button" id="startServerButton">Start Server</button>
+          <button class="input-button" id="stopServerButton" style="display: none">Stop Server</button>
         </div>
         <div id="hostConsolePreview" style="display: none; grid-template-columns: 1fr auto; background-color: black; place-content: center;">
           <span id="consoleText" class="server-status">Initializing</span>
