Allow Non Hosts
- Required fields changed
- Start button will only be displayed if you have "server settings"
- This allows people to just input the gistID and the accessToken and they will be able to see server data!

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
         </div>
         <div id="startControls" style="display: grid; grid-template-columns: auto 1fr; grid-gap: 5px;">
           <button id="toggleOptionsButton" class="fas fa-gear" style="padding: 0px 15px;"></button>
-          <button class="input-button" id="startServerButton">Start Server</button>
+          <button class="input-button" id="startServerButton" style="display: none;">Start Server</button>
           <button class="input-button" id="stopServerButton" style="display: none">Stop Server</button>
         </div>
         <div id="hostConsolePreview" style="display: none; grid-template-columns: 1fr auto; background-color: black; place-content: center;">
