Refresh Server Status
- Added refresh server status button
- Refresh server functionality
- Refresh limit of once every 5 seconds
- Refresh button will disable if unable to refresh

--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,9 @@
             <h3 id="serverPortText">N/A</h3>
           </div>            
         </div>
-        <div id="startControls" style="display: grid; grid-template-columns: auto 1fr; grid-gap: 5px;">
+        <div id="startControls" style="display: grid; grid-template-columns: auto auto 1fr; grid-gap: 5px;">
           <button id="toggleOptionsButton" class="fas fa-gear" style="padding: 0px 15px;"></button>
+          <button id="refreshButton" class="fas fa-refresh"></button>
           <button class="input-button" id="startServerButton" style="display: none;">Start Server</button>
           <button class="input-button" id="stopServerButton" style="display: none">Stop Server</button>
         </div>
