Progress on Auto Update
- General Update for a bunch of stuff. Not sure if it will be kept...having a lot of trouble with it.
- But when packaged its no longer giving an error. I just need to actually display that autoUpdate is trying to do something.

--- a/src/index.html
+++ b/src/index.html
@@ -113,4 +113,5 @@
   <script src="gist.js"></script>
   <script src="server.js"></script>
   <script src="loopback.js"></script>
+  <script src="autoUpdater.js"></script>
 </html>
