Working Auto Updater!
- Woo! This took a bit of time. But now when I make a new research the app will notice that and upon closing the application will install the update. More improvements to come!

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 
     <div class="base-grid">
       <div class="frame-grid">
-        <h4 style="color: white; padding: 10px 0px; margin: auto 10px;">Zerocraft Sync</h4>
+        <h4 style="color: white; padding: 10px 0px; margin: auto 10px;">Zerocraft Sync 1.0.1</h4>
         <button id="minimizeButton" class="fa fa-window-minimize"></button>
         <button id="maximizeButton" class="fa fa-window-maximize"></button>
         <button id="exitButton" class="fa-solid fa-power-off"></button>
