--- a/src/index.html
+++ b/src/index.html
@@ -66,14 +66,16 @@
     </div>
 
     <div id="settingsOverlay" class="overlay" style="display: none;">
-      <div id="selectedHost" class="centered-container" style="grid-template-rows: 1fr auto; grid-gap: 5px; display: none;">
+      <div id="selectedHost" class="centered-container" style="grid-template-rows: 1fr auto auto; grid-gap: 5px; display: none;">
         <button id="pasteHostDataButton" class="paste-data-button">Paste Host Data</button>
         <button id="specificHostDataButton" class="specific-data-button">Enter Specifics</button>
+        <button id="backHostButton" class="paste-data-button">Back</button>
       </div>
 
-      <div id="selectedUser" class="centered-container" style="grid-template-rows: 1fr auto; grid-gap: 5px; display: none;">
+      <div id="selectedUser" class="centered-container" style="grid-template-rows: 1fr auto auto; grid-gap: 5px; display: none;">
         <button id="pasteUserDataButton" class="paste-data-button">Paste User Data</button>
         <button id="specificUserDataButton" class="specific-data-button">Enter Specifics</button>
+        <button id="backUserButton" class="paste-data-button">Back</button>
       </div>
 
       <div id="hostSettingsSpecifics" class="centered-container" style="text-align: center; display: none;">
