--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,9 @@
             <p style="text-align: center;">Let me host when server is offline!</p>
           </div>
         </div>
+        <div style="display: grid;">
+          <button class="input-button" id="selectTypeQuitButton">Quit</button>
+        </div>
       </div>
     </div>
 
