Display Update Available
- Will display update available and update and wait for user to either restart or quit. (Need to look into a way that doesn't force the user to just download it and install)

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
           <h2>Update Available!</h2>
         </div>
         <div id="updateControlDiv" style="display: none; grid-template-columns: 1fr 1fr; grid-gap: 5px;">
-          <button id="startUpdateButton" class="input-button">Update</button>
-          <button id="quitUpdateButton" class="input-button">Quit</button>
+          <button id="startUpdateButton" class="input-button">Update & Restart</button>
+          <button id="quitUpdateButton" class="input-button">Update & Quit</button>
         </div>
       </div>
     </div>
